--- a/systemharden.html
+++ b/systemharden.html
@@ -296,15 +296,103 @@
             <div class="slideshow-container">
 
                 <div class="mySlides faded">
-                    <div class="numbertext">1 / 3</div>
-                    <img src="img/cybersecu.jpg" style="width:100%">
-                    <div class="text">Caption Text</div>
+                    <div class="slide">
+                        <h1 class="text-center">NETWORK HARDENING<br /></h1>
+                        <h1 class="text-center">Network security hardening<br /><br /></h1>
+                        <ul>
+                            <li class="size">
+                                Update the firmware on all network devices
+                            </li>
+                            <li class="size">
+                                Always ensure the network is using the most secure devices
+                                <ul>
+                                    <li class="size">
+                                        Use switches instead of hubs, servers newer than MS 2005
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="size">
+                                Update the port security by limiting which systems can connect to a port on the switch by listing specific MAC address with the port
+                            </li>
+                            <li class="size">
+                                MAC limiting and Filtering – filtering allows the administrator to restrict which systems can send data to other systems on the network
+                            </li>
+                            <li class="size">
+                                Disable unused interfaces (ports)
+                            </li>
+                            <li class="size">
+                                802.1x –  for both wired and wireless; ensure anyone who connects to the network supplies valid credentials before the network connections is allowed
+                            </li>
+                        </ul>
+                    </div>
                 </div>
 
                 <div class="mySlides faded">
-                    <div class="numbertext">2 / 3</div>
-                    <img src="img/cybersecu.jpg" style="width:100%">
-                    <div class="text">Caption Two</div>
+                    <div class="slide">
+                        <h1 class="text-center">NETWORK HARDENING<br /></h1>
+                        <h1 class="text-center">Group Policies<br /><br /></h1>
+                        <ul>
+                            <li class="size">
+                                Tool for hardening Windows system; allows administrator to enable or disable various features in Windows
+                            </li>
+                            <li class="size">
+                                Policies include:
+                                <ul>
+                                    <li class="size2">
+                                        Local policies
+                                    </li>
+                                    <li class="size2">
+                                        Windows Firewall and Advanced Security
+                                    </li>
+                                    <li class="size2">
+                                        Software Restriction
+                                    </li>
+                                    <li class="size2">
+                                        Advanced Audit Policy Configuration
+                                    </li>
+                                    <li class="size2">
+                                        Scripts
+                                    </li>
+                                    <li class="size2">
+                                        IE Maintenance
+                                    </li>
+                                    <li class="size2">
+                                        Control Panel, Desktop, Start Menu and Taskbar
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="size">
+                                Can be set up as a template and/or group policy or Organizational Unit Policy
+                            </li>
+                            <li class="size">
+                                Can also build security policy as text files with script as a security template and deploy to a group of machines
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="mySlides faded">
+                    <div class="slide">
+                        <h1 class="text-center">NETWORK HARDENING<br /></h1>
+                        <h1 class="text-center">Configuration Baseline<br /><br /></h1>
+                        <ul>
+                            <li class="size">
+                                A standard configuration that has been approved by the company for a specific type of system or device as being secure.  Required for all systems in order to meet the desired security requirements of the company.
+                            </li>
+                            <li class="size">
+                                Any changes to a system must follow the change management system process as defined by the company
+                            </li>
+                            <li class="size">
+                                Baselines vary based on location in the network and how used with the company
+                            </li>
+                            <li class="size">
+                                Security baselines for each type of system must be properly documented and the steps recorded and tested prior to distributing to the security administrators
+                            </li>
+                            <li class="size">
+                                Phases - Security Posture, initial Baseline configuration, continuous security monitoring, remediation
+                            </li>
+                        </ul>
+                    </div>
                 </div>
 
                 <div class="mySlides faded">
