--- a/systemharden.html
+++ b/systemharden.html
@@ -71,7 +71,7 @@
             <div class="slideshow-container">
 
                 <div class="mySlides faded">
-                    <div class="numbertext">1 / 1</div>
+                    <div class="numbertext">1 / 2</div>
                     <div class="slide">
                         <h1 class="text-center">ABOUT<br /><br /></h1>
                         <ul>
@@ -94,11 +94,20 @@
                     </div>
                 </div>
 
+                <div class="mySlides faded">
+                    <div class="numbertext">2 / 2</div>
+                    <div><h1 class="text-center"><a href="https://www.youtube.com/watch?v=opRMrEfAIiI">What's your password?</a></h1></div>
+                </div>
+
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
             </div>
             <br>
 
             <div style="text-align:center">
                 <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
             </div>
         </div>
         <div class="info" id="socEng">
